# blemshoga

./: .gitignore  CMakeLists.txt  README.md  makefile
resources/: char16.xcf  char32.aseprite
resources/ent/: box.ase  box.ent  rat.ase  rat.ent
resources/lua/: blemshoga.lua  core.lua  load.lua  post-load.lua
resources/old/ent/: player.ase  rat.ent
resources/old/tiles/: blood.ase  floor_stone.ase  wall_stone.ase
resources/tiles/: blood.tile  door.ase  door_closed.tile  door_open.tile  floor.lua  rat.lua  stone_floor.tile  stone_wall.tile  test.lua  vase.ase  vase.tile
src/: ai.c  ai.h  allegro.h  blemshoga.c  blemshoga.cpp  blemshoga.h  block.c  block.h  ehandle.c  ehandle.h  ent.c  ent.h  entity.h  gene.c  gene.h  item.h  lapi.c  lapi.h  loadtile.c  loadtile.h  log.c  log.h  lvgen.c  lvgen.h  map.c  map.h  music.c  music.h  resmgr.c  resmgr.h  tile.c  tile.h  tileaction.c  tileaction.h  utils.c  utils.h
